--- a/SplitKaroApp/package.json
+++ b/SplitKaroApp/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,8 +22,10 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-check-box": "^2.1.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-otp-entry": "^1.8.1",
     "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
