Add AddExpense tab with modal for options; update .gitignore and eas.json for distribution settings

--- a/SplitKaroApp/eas.json
+++ b/SplitKaroApp/eas.json
@@ -3,12 +3,14 @@
     "development": {
       "android": {
         "buildType": "apk"
-      }
+      },
+      "distribution": "internal"
     },
     "production": {
       "android": {
         "buildType": "app-bundle"
-      }
+      },
+      "distribution": "store"
     }
   }
 }
