--- a/SplitKaroApp/package.json
+++ b/SplitKaroApp/package.json
@@ -21,6 +21,7 @@
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
