--- a/SplitKaroApp/package.json
+++ b/SplitKaroApp/package.json
@@ -10,13 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.18",
+    "expo": "~52.0.20",
     "expo-status-bar": "~2.0.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
@@ -24,12 +24,13 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-otp-entry": "^1.8.1",
     "react-native-reanimated": "^3.16.5",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
