--- a/SplitKaroApp/package.json
+++ b/SplitKaroApp/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/stack": "^7.1.0",
     "axios": "^1.7.9",
     "expo": "~52.0.20",
+    "expo-contacts": "~14.0.2",
     "expo-status-bar": "~2.0.0",
     "lottie-react-native": "^7.1.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-chart-kit": "^6.12.0",
@@ -31,8 +33,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.10.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-contacts": "~14.0.2"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
